# libconfuse

./: .codedocs  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  ChangeLog.md  Doxyfile.in  HACKING.md  LICENSE  Makefile.am  NEWS  README  README.md  autogen.sh  conanfile.txt  configure.ac  confuse-config.in  indent.sh  libconfuse.spec.in
.github/: CONTRIBUTING.md
.github/workflows/: build.yml  release.yml
BCB/: README.txt  cfgtest.bpr  config.h  libConfuse.bpr  wincfgtest.bpr
dev-cpp/: cfgtest.dev  config.h  libConfuse.dev  test.conf
doc/: .cvsignore  .gitignore  Doxyfile.in  Makefile.am  codedocs.css  doxygen-footer.shtml  doxygen-header.html  doxygen-header.shtml  listing2.c  listing3.c  listing4.c  listing5.c  listing7.c  tutorial.md  tutorial.xml
examples/: .cvsignore  .gitignore  Makefile.am  addsec.c  cfgtest.c  cli.c  deprecated.c  env.c  ftpconf.c  nested.c  parsebuf.c  reread.c  simple.c  simple.conf  test.conf  wincfgtest.c
m4/: .gitignore  ChangeLog  Makefile.am
msvc/cfgtest/: cfgtest.sln  cfgtest.vcproj
msvc/libConfuse/: config.h  libConfuse.sln  libConfuse.vcproj
msvc/wincfgtest/: wincfgtest.sln  wincfgtest.vcproj
msvc6/libConfuse/: libConfuse.dsp
po/: .cvsignore  .gitignore  ChangeLog  LINGUAS  Makevars  confuse.pot  de.po  en@boldquot.po  en@quot.po  fr.po  ka.po  sv.po
src/: .gitignore  Makefile.am  confuse.c  confuse.h  fmemopen.c  lexer.l
tests/: .cvsignore  .gitignore  Makefile.am  annotate.c  annotate.conf  check_confuse.c  check_confuse.h  comment_parsing.c  empty_string.c  env.c  ignore_parm.c  include.c  int_types.c  keyval.c  list_plus_syntax.c  print_filter.c  quote_before_print.c  rawinc.conf  rawsec.c  searchpath.c  section_add.c  section_getopt.c  section_remove.c  section_title_dupes.c  suite_dup.c  suite_func.c  suite_list.c  suite_single.c  suite_validate.c
windows/borland/: config.h
windows/devcpp/: config.h
windows/mingw/: Makefile  README.TXT  config.h
windows/msvc6/libConfuse/: config.h
windows/msvs.net/: config.h
